--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Update script.js
-        run: datagen-test/.github/script.js script.js
+        run: datagen-test/script.js script.js
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
